<resources>
    <string name="app_name">Midas treasures</string>
    <string name="start_game">Start Game</string>
    <string name="quit_game">Quit Game</string>
    <string name="score">Score: </string>
    <string name="total_score">Total score:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="one_hundred">100</string>
    <string name="five_hundred">500</string>
    <string name="two_thousand">2 000</string>
    <string name="ten_thousand">10 000</string>
    <string name="fifty_thousand">50 000</string>
    <string name="two_hundred_thousand">200 000</string>
    <string name="please_wait">Please Wait...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Options</string>
    <string name="main_menu">Main Menu</string>
    <string name="music">Music</string>
    <string name="bonus">Bonus</string>
    <string name="light">Light</string>
    <string name="back_to_menu">Back to menu</string>
</resources>