<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".screens.OptionsFragment">

    <TextView
        android:id="@+id/textViewOptionsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/musicBar"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:max="10"
        android:progress="10"
        android:indeterminate="false"
        android:thumb="@drawable/body_bar"
        android:progressDrawable="@drawable/bar_background"
        android:padding="6dp" />

    <TextView
        android:id="@+id/textViewInfoMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/music"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/lightBar"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginEnd="64dp"
        android:max="10"
        android:progress="10"
        android:indeterminate="false"
        android:thumb="@drawable/body_bar"
        android:progressDrawable="@drawable/bar_background"
        android:padding="6dp" />

    <SeekBar
        android:id="@+id/bonusBar"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="64dp"
        android:max="10"
        android:progress="10"
        android:indeterminate="false"
        android:thumb="@drawable/body_bar"
        android:progressDrawable="@drawable/bar_background"
        android:padding="6dp" />

    <TextView
        android:id="@+id/textViewInfoLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="86dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/light"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewInfoBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="86dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/bonus"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:background="@drawable/new_button"
        android:textColor="@color/white"
        android:foregroundGravity="center"
        android:drawableStart="@drawable/ic_arrow_back"
        android:fontFamily="@font/chango"
        android:text="@string/back_to_menu" />

</FrameLayout>